--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>PINK Stozen</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
+	<meta name="viewport"
+        content="width=device-width, initial-scale=1">
 	<title>Gllacy-stozen</title> 
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
