--- a/index.html
+++ b/index.html
@@ -150,13 +150,11 @@
 	<h2>Пишите:</h2>
 	<span>mail@htmlacademy.ru</span>
 	<h2>Приезжайте в гости:</h2>
-	<span>Санкт-Петерубрг <br>Невский проспект, д. 20</span>
+	<span>Санкт-Петербург <br>Невский проспект, д. 20</span>
 	
 </section>
 <section class="map">
-	<svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="595.28px" height="61.905px" viewBox="0 0 595.28 61.905" enable-background="new 0 0 595.28 61.905" xml:space="preserve">
-	  <polygon fill="#FFFFFF" points="297.64,61.905 0,0 595.28,0 "/>
-	</svg>
+	
 	<div id="map"></div>
     <script>
       var map;
