--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<img src="img/iphone-hand-mobile@1x.png" width="258" alt="" class="handled">
 
 
-	<div class="download-btn">Скачать приложение</div>
+	<a class="download-btn">Скачать приложение</a>
 	<div class="OS-images">
 		<img src="img/logo-apple.svg" width="50" alt="">
 		<img src="img/logo-android.svg" width="50" alt="">
