opera mini vw test

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 	<img src="img/iphone-hand-mobile@1x.png" width="258" alt="" class="handled">
 
 
-	<a class="download-btn">Скачать приложение</a>
+	<div class="download-btn">Скачать приложение</div>
 	<div class="OS-images">
-		<img src="img/logo-apple.svg" width="50" alt="">
-		<img src="img/logo-android.svg" width="50" alt="">
-		<img src="img/logo-microsoft.svg" width="50" alt="">
+		<a href="#"><img class="applelogo" src="img/logo-apple.svg" width="50" alt=""></a>
+		<a href="#"><img class="andoidlogo" src="img/logo-android.svg" width="50" alt=""></a>
+		<a href="#"><img class="microsoftlogo" src="img/logo-microsoft.svg" width="50" alt=""></a>
 	</div>
 	<p>Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
 </section>
