--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 		<a class="author" href="#"> Created by Stozen</a>
 	
 </section>
-<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="js/jquery.mobile.custom.min.js"></script>
 <script src="js/script.js"></script>
 </script>
