html validator fixes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <ul class="main-menu ">
 	<li class="menu-item">
 		<a href="#" id="logo-pink-mobile">
-			<svg class="logo-pink-mobile" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
+			<svg class="logo-pink-mobile" version="1.0"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
 		  <g>
 		    <path fill="#FFFFFF" d="M0,1.449c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.147v0.064 c0,4.861-4.057,7.373-8.854,7.373H2.544v6.825c0,0.708-0.58,1.288-1.288,1.288C0.58,22.859,0,22.279,0,21.571V1.449z M8.114,12.428 c3.734,0,6.182-1.996,6.182-4.958V7.405c0-3.22-2.415-4.894-6.054-4.894H2.544v9.917H8.114z"/>
 		    <path fill="#FFFFFF" d="M21.729,1.288C21.729,0.58,22.308,0,22.983,0c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.288-1.288,1.288c-0.676,0-1.255-0.58-1.255-1.288V1.288z"/>
@@ -27,7 +27,7 @@
 			</svg>
 		</a>
 		<a href="#" id="logo-pink-tablet">
-			<svg class="logo-pink-tablet" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="146.3px" height="40.375px" viewBox="0 0 146.3 40.375" enable-background="new 0 0 146.3 40.375" xml:space="preserve">
+			<svg class="logo-pink-tablet" version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="146.3px" height="40.375px" viewBox="0 0 146.3 40.375" enable-background="new 0 0 146.3 40.375" xml:space="preserve">
 			  <g>
 			    <path class="logo-svg-text" fill="#FFFFFF" d="M71.874,18.661c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.146v0.063 c0,4.86-4.057,7.373-8.854,7.373h-5.475v6.825c0,0.708-0.58,1.287-1.289,1.287c-0.676,0-1.256-0.58-1.256-1.287L71.874,18.661 L71.874,18.661z M79.988,29.641c3.734,0,6.182-1.996,6.182-4.959v-0.062c0-3.221-2.414-4.894-6.053-4.894h-5.699v9.917h5.57V29.641 z"/>
 			    <path class="logo-svg-text" fill="#FFFFFF" d="M93.603,18.5c0-0.708,0.579-1.288,1.255-1.288c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.287-1.288,1.287c-0.676,0-1.255-0.579-1.255-1.287V18.5z"/>
@@ -141,11 +141,11 @@
 		</div>
 	<picture>
 		<source  media="(min-width:1080px)" srcset="img/features-item-original.png">
-		<img class="features-image2"  src="" width="0" height="0" alt="" >
+		<img class="features-image2"  src="//:0" width="0" height="0" alt="" >
 	</picture>
 	<picture>
 		<source  media="(min-width:1080px)" srcset="img/features-item-filter.png">
-		<img class="features-image3"  src="" width="0" height="0" alt="" >
+		<img class="features-image3"  src="//:0" width="0" height="0" alt="" >
 	</picture>	
 	<picture>
 		<source class="features-image" media="(min-width:1080px)" srcset="img/features-item-filter-and-smile.png">
@@ -166,8 +166,8 @@
 	<input type="radio" name="review" id="radio1" checked>
 	<input type="radio" name="review" id="radio2">
 	<input type="radio" name="review" id="radio3">
-	<div class="slider-desktop-controls left" id="prev"> < </div>
-	<div class="slider-desktop-controls right"  id="next"> > </div>
+	<div class="slider-desktop-controls left" id="prev"> &lt; </div>
+	<div class="slider-desktop-controls right"  id="next"> &gt; </div>
 	<div class="slider-container">	
 		<div class="slider-item">
 		<h2>Николай Петров</h2>
@@ -313,7 +313,7 @@
 <section class="footer">
 	
 	<a class="logo-footer">
-			<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="146.3px" height="40.375px" viewBox="0 0 146.3 40.375" enable-background="new 0 0 146.3 40.375" xml:space="preserve">
+			<svg version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="146.3px" height="40.375px" viewBox="0 0 146.3 40.375" enable-background="new 0 0 146.3 40.375" xml:space="preserve">
 			  <g>
 			    <path  class="logo-svg-text" fill="#283645" d="M71.874,18.661c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.146v0.063 c0,4.86-4.057,7.373-8.854,7.373h-5.475v6.825c0,0.708-0.58,1.287-1.289,1.287c-0.676,0-1.256-0.58-1.256-1.287L71.874,18.661 L71.874,18.661z M79.988,29.641c3.734,0,6.182-1.996,6.182-4.959v-0.062c0-3.221-2.414-4.894-6.053-4.894h-5.699v9.917h5.57V29.641 z"/>
 			    <path class="logo-svg-text" fill="#283645" d="M93.603,18.5c0-0.708,0.579-1.288,1.255-1.288c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.287-1.288,1.287c-0.676,0-1.255-0.579-1.255-1.287V18.5z"/>
