--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 	<meta name="keywords" content="">
 	<meta name="viewport"
         content="width=device-width, initial-scale=1">
+        <script>document.addEventListener('DOMContentLoaded', makeMenuHidden);
+        	function makeMenuHidden() {
+				menu.classList.add("hidden");	
+				}
+        </script>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=cyrillic" rel="stylesheet">
